--- a/src/front/Containerfile
+++ b/src/front/Containerfile
@@ -1,3 +1,5 @@
 FROM docker.io/library/nginx:1.29.3-alpine3.22-slim
 RUN apk add --no-cache openssl
+COPY nginx.conf /etc/nginx/nginx.conf
+COPY conf/ /usr/local/nginx/conf/
 COPY index.html /usr/share/nginx/html/
