python web client

--- a/src/front/nginx.conf
+++ b/src/front/nginx.conf
@@ -35,5 +35,8 @@ http {
         ssl_certificate     /usr/local/nginx/conf/cert.pem;
         ssl_certificate_key /usr/local/nginx/conf/key.pem;
         # FIXME ssl_password_file   /usr/local/nginx/conf/pass.txt;
+        location / {
+            root   /usr/share/nginx/html;
+        }
     }
 }
