--- a/src/client/python/Containerfile
+++ b/src/client/python/Containerfile
@@ -1,3 +1,7 @@
 FROM docker.io/library/python:3.14.2-alpine3.23
-RUN apk add --no-cache openssl
-CMD ["openssl", "version"]
+WORKDIR /usr/src/app
+COPY requirements.txt ./
+RUN apk add --no-cache openssl && \
+    pip install --no-cache-dir -r requirements.txt
+COPY . .
+CMD ["python", "-V"]
